Indicate this package works with mypy

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,10 @@ classifiers =
 [options]
 packages =
     aguirre
+include-package-data = True
+
+[options.package_data]
+aguirre = py.typed
 
 [tool:check-wheel-contents]
 package = aguirre
