--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,8 @@ long_description_content_type = text/markdown
 author = P. S. Clarke
 author_email = aguirre@pscl4rke.net
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 3 - Alpha
+    Topic :: Internet :: WWW/HTTP
 
 [options]
 packages =
