--- a/setup.cfg
+++ b/setup.cfg
@@ -4,12 +4,15 @@
 name = aguirre
 version = attr:aguirre.__version__
 url = https://github.com/pscl4rke/aguirre
-project_urls = 
+project_urls =
     Source Code = https://github.com/pscl4rke/aguirre
     Issues = https://github.com/pscl4rke/aguirre/issues
+    Licence = https://github.com/pscl4rke/utterless/blob/master/LICENCE.txt
 description = Proof-of-concept for Python webservers to host Javascript assets
 long_description = file:README.md
 long_description_content_type = text/markdown
+licence = BSD
+license = cf:licence
 author = P. S. Clarke
 author_email = aguirre@pscl4rke.net
 classifiers =
