Promote from Alpha to Beta

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ project_urls =
     Source Code = https://github.com/pscl4rke/aguirre
     Issues = https://github.com/pscl4rke/aguirre/issues
     Licence = https://github.com/pscl4rke/utterless/blob/master/LICENCE.txt
-description = Proof-of-concept for Python webservers to host Javascript assets
+description = Let Python webservers self-host JS/CSS/etc assets like unpkg does
 long_description = file:README.md
 long_description_content_type = text/markdown
 licence = BSD
@@ -16,7 +16,9 @@ license = cf:licence
 author = P. S. Clarke
 author_email = aguirre@pscl4rke.net
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 4 - Beta
+    Framework :: Flask
+    Framework :: Quart
     Topic :: Internet :: WWW/HTTP
 
 [options]
