Use a venv for testing

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,13 @@ packages =
     aguirre.integrations
 include-package-data = True
 
+[options.extras_require]
+testing =
+    flask
+    mypy
+    pyroma
+    quart
+
 [options.package_data]
 aguirre = py.typed
 
