Support multiple python versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,14 @@ classifiers =
     Development Status :: 4 - Beta
     Framework :: Flask
     Framework :: Quart
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Topic :: Internet :: WWW/HTTP
 
 [options]
+python_requires = >=3.7
 packages =
     aguirre
     aguirre.integrations
