Ensure proper mypy coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,5 +42,12 @@ testing =
 [options.package_data]
 aguirre = py.typed
 
+[mypy]
+check_untyped_defs = True
+disallow_incomplete_defs = True
+disallow_untyped_defs = True
+disallow_untyped_decorators = True
+disallow_untyped_calls = True
+
 [tool:check-wheel-contents]
 package = aguirre
