Use coverage during testing

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ include-package-data = True
 
 [options.extras_require]
 testing =
+    coverage
     flask
     mypy
     pyroma
@@ -46,6 +47,9 @@ disallow_incomplete_defs = True
 disallow_untyped_defs = True
 disallow_untyped_decorators = True
 disallow_untyped_calls = True
+
+[coverage:run]
+source = aguirre
 
 [tool:check-wheel-contents]
 package = aguirre
