Fix setup deprecation warning

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ python_requires = >=3.7
 packages =
     aguirre
     aguirre.integrations
-include-package-data = True
+include_package_data = True
 
 [options.extras_require]
 testing =
